--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,14 @@
-body {
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
-    background-color: #36454F;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    font-family: Arial, sans-serif;
+    background-color: #d1d1d1;
 }
 
 .container {
@@ -16,7 +22,7 @@ body {
 
 h1 {
     text-align: center;
-    color: #ccc;
+    color: #000000;
 }
 
 label {
