--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en" style="height: 100%; width: 100%">
+  <head>
     <title>GRAPH GENERATOR</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
-    <h1>Upload Excel/CSV File</h1>
-    <form method="post" enctype="multipart/form-data" action="/upload">
-        <input type="file" name="file" accept=".xlsx,.csv" />
-        <input type="submit" value="Upload" />
-    </form>
-</body>
+
+    <!-- ? Tailwind css cdn -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- ?Font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- ? jquery cdn script -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+
+  <body style="height: 100%; width: 100%">
+    <div
+      class="flex items-center justify-center m-auto"
+      style="height: 100%; width: 100%"
+    >
+      <div class="p-2 rounded-md bg-gray-200 w-[350px]">
+        <h1 class="text-center pt-4 pb-4">Upload Excel/CSV File</h1>
+        <form method="post" enctype="multipart/form-data" action="/upload">
+          <div
+            class="border border-black border-dotted w-full h-[200px] cursor-pointer flex items-center justify-center rounded-md"
+            id="upload-file"
+          >
+            <i class="text-white fa fa-cloud-arrow-up fa-2xl"></i>
+          </div>
+          <div id="uploaded-file"></div>
+
+          <input
+            type="file"
+            name="file"
+            accept=".xlsx,.csv"
+            class="hidden"
+            id="upload"
+          />
+          <input
+            type="submit"
+            value="Upload"
+            class="w-full p-2 mt-2 border border-gray-500 rounded-md cursor-pointer"
+          />
+        </form>
+      </div>
+    </div>
+
+    <!-- ?Custom js -->
+    <script src="{{ url_for('static', filename='custom.js') }}"></script>
+  </body>
 </html>
